Fix alignment of changelog scrollbox

--- a/src/app/pages/system/update/update.component.css
+++ b/src/app/pages/system/update/update.component.css
@@ -28,6 +28,7 @@
 
 #changelog-card {
     height: 230px;
+    padding-right: 24px !important;
 }
 
 #changelog-title {
